# OuroborosPerformanceModelling

./: BulkServiceModel.nb  PraosTransactionModel.ipynb  README.md
BSM_results/: bulkServiceResultsCap_k0p5_N176.csv  bulkServiceResultsCap_k10p_N176.csv  bulkServiceResultsCap_k1p5_N176.csv  bulkServiceResultsCap_k1p_N176.csv  bulkServiceResultsCap_k2p5_N176.csv  bulkServiceResultsCap_k2p_N176.csv  bulkServiceResultsCap_k3p5_N176.csv  bulkServiceResultsCap_k3p_N176.csv  bulkServiceResultsCap_k4p5_N176.csv  bulkServiceResultsCap_k4p_N176.csv  bulkServiceResultsCap_k5p5_N176.csv  bulkServiceResultsCap_k5p_N176.csv  bulkServiceResultsCap_k6p5_N176.csv  bulkServiceResultsCap_k6p_N176.csv  bulkServiceResultsCap_k7p5_N176.csv  bulkServiceResultsCap_k7p_N176.csv  bulkServiceResultsCap_k8p5_N176.csv  bulkServiceResultsCap_k8p_N176.csv  bulkServiceResultsCap_k9p5_N176.csv  bulkServiceResultsCap_k9p_N176.csv
src/: BSM.hs  Main.hs  Model.hs  modelResults.cabal
