cabal-version:      2.4
name:               modelResults
version:            0.1.0.0
build-type:         Simple

executable modelResults
  main-is:          Main.hs
  hs-source-dirs:   .
  other-modules:
      Model
      BSM
  default-language: Haskell2010
  build-depends:
      base,
      deltaq,
      Chart,
      Chart-cairo
